<?xml version="1.0"?>
<package format="2">
  <name>ros-param</name>
  <version>0.0.0</version>
  <description>The ros-param package</description>

  <author email="jianle001@e.ntu.edu.sg">Bruce Chan Jian Le</author>
  <maintainer email="jianle00@e.ntu.edu.sg">Bruce Chan Jian Le</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/brucechanjianle/ros-param</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>
  </export>

</package>
